apps/forward-auth/javelin/resources/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
spec:
  forwardAuth:
    address: https://auth.wesl.io
    authResponseHeaders:
      - X-Forwarded-User
