apps/forward-auth/javelin/resources/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forward-auth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
spec:
  rules:
    - host: auth.wesley.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forward-auth
                port:
                  name: auth-http
